# support-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
scripts/: langsmith_smoke_check.py
src/app/: __init__.py  config.py  logging_config.py  main.py
src/app/api/: routes.py  schemas.py
src/app/data/: models.py  store.py
src/app/eval/: dataset.py  run_eval.py
src/app/graph/: build.py  nodes.py  run.py  state.py
src/app/tools/: escalation_tools.py  order_tools.py  schemas.py  ticket_tools.py
static/: index.html
tests/api/: test_chat.py
tests/data/: test_store.py
tests/eval/: test_dataset.py
tests/graph/: test_check_result.py  test_guardrail.py  test_human_handoff.py  test_ticket_guardrail.py  test_vertical_slice.py
tests/tools/: test_order_tools.py  test_ticket_tools.py
