[project]
name = "benchdog-api-starter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Chip", email = "allan.missy@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.116.0",
    "fastapi>=0.139.0",
    "langchain>=1.3.11",
    "langchain-anthropic>=1.4.8",
    "langgraph>=1.2.8",
    "langsmith>=0.10.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "structlog>=26.1.0",
    "uvicorn>=0.50.2",
]

[tool.uv.build-backend]
module-name = "app"

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]
